# mod-wsgi

./: Makefile-2.X.in  README  mod_wsgi.c
ap_swig_py/: Makefile.in  configure  configure.ac  setup.py.in
ap_swig_py/apache/: _apr_tables.i  _http_protocol.i  _httpd.i  ap_mmn.py  ap_mpm.py  apr_errno.py  apr_strings.py  apr_tables.py  http_config.py  http_connection.py  http_core.py  http_log.py  http_main.py  http_protocol.py  http_request.py  http_vhost.py  httpd.py  mod_auth.py  util_script.py
ap_swig_py/apache/apache13/: ap_mmn.i  ap_mpm.i  apr_errno.i  apr_strings.i  apr_tables.i  http_config.i  http_core.i  http_log.i  http_main.i  http_protocol.i  http_request.i  http_vhost.i  httpd.i  util_script.i
ap_swig_py/apache/apache20/: ap_mmn.i  ap_mpm.i  apr_errno.i  apr_strings.i  apr_tables.i  http_config.i  http_connection.i  http_core.i  http_log.i  http_main.i  http_protocol.i  http_request.i  http_vhost.i  httpd.i  util_script.i
ap_swig_py/apache/apache22/: ap_mmn.i  ap_mpm.i  apr_errno.i  apr_strings.i  apr_tables.i  http_config.i  http_connection.i  http_core.i  http_log.i  http_main.i  http_protocol.i  http_request.i  http_vhost.i  httpd.i  mod_auth.i  util_script.i
